proper WC fetching & syncing + storage in DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="item_sponsor">Sponsor</string>
     <string name="item_organisers">Organisers</string>
     <string name="item_contact">Contact</string>
+    <string name="action_refresh">Refresh</string>
 
 </resources>
