add support to add MYSESSION while viewing session in detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="item_organisers">Organisers</string>
     <string name="item_contact">Contact</string>
     <string name="action_refresh">Refresh</string>
+    <string name="favorite">favorite</string>
 
 </resources>
