--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="item_contact">Contact</string>
     <string name="action_refresh">Refresh</string>
     <string name="favorite">favorite</string>
+    <string name="webversion">Web version</string>
+    <string name="feedback">Feedback</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
