--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="schedule_to_be_announced">Schedule to be announced</string>
     <string name="wc_about">About</string>
     <string name="wc_location">Location</string>
+    <string name="action_search">Search WordCamps</string>
+    <string name="search_wc_hint">Search WordCamps</string>
 
 </resources>
