--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,8 @@
 <resources>
 
     <string name="app_name">WordCamp Central</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item_attending">Attending</string>
-    <string name="item_sponsor">Sponsor</string>
-    <string name="item_organisers">Organisers</string>
-    <string name="item_contact">Contact</string>
     <string name="action_refresh">Refresh</string>
     <string name="favorite">favorite</string>
     <string name="webversion">Web version</string>
@@ -24,5 +16,7 @@
     <string name="action_search">Search WordCamps</string>
     <string name="search_wc_hint">Search WordCamps</string>
     <string name="empty_mywordcamps">No WordCamps added yet</string>
+    <string name="speaker_title">Speakers</string>
+    <string name="session_title">Sessions</string>
 
 </resources>
