add WCs those are only for 1 days + add directions to the venue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="empty_mywordcamps">No WordCamps added yet</string>
     <string name="speaker_title">Speakers</string>
     <string name="session_title">Sessions</string>
+    <string name="map_directions">Get directions to the venue</string>
 
 </resources>
