--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="wc_about">About</string>
     <string name="wc_location">Location</string>
     <string name="action_search">Search WordCamps</string>
-    <string name="search_wc_hint"><![CDATA[<font color = #ffffff> Search WordCamps </font>]]></string>
+    <string name="search_wc_hint">Search WordCamps</string>
     <string name="empty_mywordcamps">No WordCamps added yet</string>
     <string name="speaker_title">Speakers</string>
     <string name="session_title">Sessions</string>
