--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">WordCamp Central</string>
+    <string name="app_name" translatable="false">WordCamp Central</string>
     <string name="action_bookmark">Bookmark</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_favorite">Favorite</string>
