--- a/app/src/main/res/values-en-rAU/strings.xml
+++ b/app/src/main/res/values-en-rAU/strings.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="no_network_toast">No network available</string>
+	<string name="empty_wordcamps">WordCamps not yet synced</string>
+	<string name="title_sessions">Sessions</string>
+	<string name="title_speakers">Speakers</string>
+	<string name="my_sessions_title">My Sessions</string>
+	<string name="action_send">Send</string>
+	<string name="title_schedule">Schedule</string>
+	<string name="title_overview">Overview</string>
+	<string name="action_webversion">Web version</string>
+	<string name="mysession_title">My Sessions</string>
+	<string name="past_wc_title">Past</string>
+	<string name="my_wc_title">My WordCamp</string>
+	<string name="upcoming_wc_title">Upcoming</string>
+	<string name="action_bookmark">Bookmark</string>
+	<string name="action_favorite">Favourite</string>
 	<string name="hint_title">Title</string>
 	<string name="action_feedback">Feedback</string>
 	<string name="bug">Reporting a Bug?</string>
 	<string name="hint_description">Description</string>
+	<string name="map_directions_text">Get directions to the venue</string>
 	<string name="update_sessions_toast">Updated sessions</string>
 	<string name="help_and_feedback">Feedback</string>
 	<string name="feedback_url_not_available_toast">Feedback URL not yet available</string>
@@ -17,6 +33,5 @@
 	<string name="empty_mysessions">No Sessions favourited</string>
 	<string name="update_speakers_toast">Updated speakers</string>
 	<string name="action_search">Search WordCamps</string>
-	<string name="app_name">WordCamp Central</string>
 	<string name="action_refresh">Refresh</string>
 </resources>
