--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,7 @@
     <string name="hint_title">Title</string>
     <string name="my_sessions_title">My Sessions</string>
     <string name="upcoming_wc_title">Upcoming</string>
-    <string name="my_wc_title">My WordCamp</string>
-    <string name="past_wc_title">Past</string>
+    <string name="my_wc_title">Favorites</string>
     <string name="title_overview">Overview</string>
     <string name="title_schedule">Schedule</string>
     <string name="title_speakers">Speakers</string>
