--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="my_wc_title">Preferiti</string>
 	<string name="no_network_toast">Nessun network disponibile</string>
 	<string name="empty_wordcamps">WordCamp non è ancora sincronizzato</string>
 	<string name="title_speakers">Relatori</string>
-	<string name="action_bookmark">Segnalibro</string>
-	<string name="past_wc_title">Passato</string>
-	<string name="my_wc_title">Il mio WordCamp</string>
 	<string name="upcoming_wc_title">Prossimo</string>
 	<string name="action_favorite">Preferito</string>
 	<string name="action_webversion">Versione per il web</string>
