redesign schedule list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">WordCamp Central</string>
+    <string name="date_separator" translatable="false">" – "</string>
+
     <string name="action_refresh">Refresh</string>
     <string name="action_favorite">Favorite</string>
     <string name="action_webversion">Web version</string>
