--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="title_sessions">Sessions</string>
     <string name="no_network_toast">No network available</string>
     <string name="visit_website">Visit Website</string>
+    <string name="add_to_calendar">Add to calendar</string>
 </resources>
