Change app name to _WordCamp_

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">WordCamp Central</string>
+    <string name="app_name" translatable="false">WordCamp</string>
     <string name="date_separator" translatable="false">" – "</string>
 
     <string name="action_refresh">Refresh</string>
