--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="action_search">Search WordCamps</string>
     <string name="search_wc_hint">Search WordCamps</string>
     <string name="action_feedback">Feedback</string>
+    <string name="action_wc_feedback">WordCamp Feedback</string>
     <string name="action_send">Send</string>
     <string name="action_navigate">Navigate</string>
     <string name="speaker_to_be_announced">Speakers yet to be announced</string>
@@ -22,7 +23,7 @@
     <string name="update_overview_toast">Updated overview</string>
     <string name="update_sessions_toast">Updated sessions</string>
     <string name="update_speakers_toast">Updated speakers</string>
-    <string name="feedback_url_not_available_toast">Feedback URL not yet available</string>
+    <string name="feedback_url_not_available_toast">This WordCamp hasn\'t published a feedback URL yet</string>
     <string name="help_and_feedback">Feedback</string>
     <string name="bug">Reporting a Bug?</string>
     <string name="hint_description">Description</string>
