Main activity title is now _WordCamp Central_

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">WordCamp</string>
+    <string name="main_action_bar_title" translatable="false">WordCamp Central</string>
     <string name="date_separator" translatable="false">" – "</string>
 
     <string name="action_refresh">Refresh</string>
