show 2 speakers name if there are only 2 and format strings properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="visit_website">Visit Website</string>
     <string name="add_to_calendar">Add to calendar</string>
     <string name="about_description_fallback">Check out the website for more information</string>
+    <string name="multiple_speakers">and %d others</string>
+    <string name="and">" and "</string>
 </resources>
