--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="feedback_url_not_available_toast">Dieses WordCamp hat bisher keine Feedback-URL veröffentlicht</string>
+	<string name="action_wc_feedback">WordCamp-Feedback</string>
+	<string name="about_description_fallback">Besuche die Website für weitere Informationen</string>
+	<string name="add_to_calendar">Zum Kalender hinzufügen</string>
+	<string name="wc_date">Datum</string>
+	<string name="action_navigate">Navigieren</string>
+	<string name="visit_website">Website besuchen</string>
+	<string name="my_wc_title">Favoriten</string>
 	<string name="no_network_toast">Kein Netzwerk verfügbar</string>
 	<string name="empty_wordcamps">WordCamps wurden noch nicht synchronisiert</string>
 	<string name="title_schedule">Programm</string>
