--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,5 @@
     <string name="add_to_calendar">Add to calendar</string>
     <string name="about_description_fallback">Check out the website for more information</string>
     <string name="multiple_speakers">and %d others</string>
-    <string name="and">" and "</string>
+    <string name="and">and</string>
 </resources>
