--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<string name="multiple_speakers">og %d andre</string>
+	<string name="and">og</string>
 	<string name="feedback_url_not_available_toast">Denne WordCampen har ikke publisert tilbakemeldingslenke enda.</string>
 	<string name="action_wc_feedback">Tilbakemelding til WordCamp</string>
 	<string name="add_to_calendar">Legg til i kalender</string>
